--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2024"
 [dependencies]
 raylib = "5.5.1"
 ndarray = "0.16.1"
+serde = {version= "1.0.228", features=["derive"]}
+serde_json = "1.0.145"
+clap = {version = "4.5.50", features = ["derive"]}
